# BSF_prototype

./: .gitignore  CMakeLists.txt  README.md  bsf_handler.h  build.sh  config.h  data.json  handler_request.h  hello_handler.h  main.cpp  package.json  static_config.yaml  testcases
BSF/DAO/PcfBinding/: IPcfBindingDao.h  InMemoryPcfBindingDao.cpp  InMemoryPcfBindingDao.h
BSF/DAO/PcfUeBinding/: IPcfUeBindingDao.h  InMemoryPcfUeBindingDao.cpp  InMemoryPcfUeBindingDao.h
BSF/Handler/PcfBinding/: PcfBindingBaseHandler.cpp  PcfBindingBaseHandler.h
BSF/Handler/PcfBinding/Delete/: PcfBindingDeleteHandler.cpp  PcfBindingDeleteHandler.h
BSF/Handler/PcfBinding/Get/: PcfBindingGetHandler.cpp  PcfBindingGetHandler.h
BSF/Handler/PcfBinding/Post/: PcfBindingPostHandler.cpp  PcfBindingPostHandler.h
BSF/Handler/PcfUeBinding/: PcfUeBindingBaseHandler.cpp  PcfUeBindingBaseHandler.h
BSF/Handler/PcfUeBinding/Delete/: PcfUeBindingDeleteHandler.cpp  PcfUeBindingDeleteHandler.h
BSF/Handler/PcfUeBinding/Get/: PcfUeBindingGetHandler.cpp  PcfUeBindingGetHandler.h
BSF/Handler/PcfUeBinding/Post/: PcfUeBindingPostHandler.cpp  PcfUeBindingPostHandler.h
BSF/Registration/: BsfRegistrationComponent.cpp  BsfRegistrationComponent.h  NrfApiWrapper.cpp
BSF/Service/PcfBinding/: IPcfBindingService.h  PcfBindingService.cpp  PcfBindingService.h  PcfBindingServiceComponent.h
BSF/Service/PcfUeBinding/: IPcfUeBindingService.h  PcfUeBindingService.cpp  PcfUeBindingService.h  PcfUeBindingServiceComponent.h
PCF/: IPcfBindingDao.h  InMemoryPcfBindingDao.cpp  InMemoryPcfBindingDao.h  PCF_dto.h  PCF_json_bridge.h
PCF/DAO/: IPcfBindingDao.h  InMemoryPcfBindingDao.cpp  InMemoryPcfBindingDao.h
PCF/DAO/PcfBinding/: IPcfBindingDao.h  InMemoryPcfBindingDao.cpp  InMemoryPcfBindingDao.h
PCF/DAO/PcfUeBinding/: IPcfUeBindingDao.h  InMemoryPcfUeBindingDao.cpp  InMemoryPcfUeBindingDao.h
PCF/Handler/: PcfBindingHandler.cpp  PcfBindingHandler.h
PCF/Handler/PcfBinding/: PcfBindingBaseHandler.h  PcfBindingHandler.cpp  PcfBindingHandler.h
PCF/Handler/PcfBinding/Delete/: PcfBindingDeleteHandler.cpp
PCF/Handler/PcfBinding/Get/: PcfBindingGetHandler.cpp
PCF/Handler/PcfBinding/Post/: PcfBindingPostHandler.cpp
PCF/Handler/PcfUeBinding/: PcfUeBindingBaseHandler.cpp  PcfUeBindingBaseHandler.h  PcfUeBindingHandler.cpp  PcfUeBindingHandler.h
PCF/Handler/PcfUeBinding/Delete/: PcfUeBindingDeleteHandler.cpp
PCF/Handler/PcfUeBinding/Get/: PcfUeBindingGetHandler.cpp  PcfUeBindingGetHandler.h
PCF/Handler/PcfUeBinding/Post/: PcfUeBindingPostHandler.cpp  PcfUeBindingPostHandler.h
PCF/Service/: IPcfBindingService.h  PcfBindingService.cpp  PcfBindingService.h  PcfBindingServiceComponent.h
PCF/Service/PcfBinding/: IPcfBindingService.h  PcfBindingService.cpp  PcfBindingService.h
PCF/Service/PcfUeBinding/: IPcfUeBindingService.h  PcfUeBindingService.cpp  PcfUeBindingService.h
UUID/: IUuidGenerator.h  UuidGenerator.cpp  UuidGenerator.h
api/: IndividualPCFBindingDocumentApi.cpp  IndividualPCFBindingDocumentApi.h  IndividualPCFForAUEBindingDocumentApi.cpp  IndividualPCFForAUEBindingDocumentApi.h  IndividualSubscriptionDocumentApi.h  PCFBindingsCollectionApi.cpp  PCFBindingsCollectionApi.h  PCFForAUEBindingsCollectionApi.cpp  PCFForAUEBindingsCollectionApi.h  PCFForAnMBSSessionBindingsCollectionApi.h  SubscriptionsCollectionApi.cpp  SubscriptionsCollectionApi.h
openapi/: nbsf_openapi.yaml
src/: AnyType.cpp  ApiException.cpp  HttpContent.cpp  Object.cpp
src/api/: IndividualPCFBindingDocumentApi.cpp  IndividualPCFForAPDUSessionBindingDocumentApi.cpp  PCFForAUEBindingsCollectionApi.cpp  SubscriptionsCollectionApi.cpp
src/model/: AccessTokenErr.cpp  IpAddr.cpp  Ipv6Prefix.cpp  Ipv6PrefixRm.cpp  PcfBinding.cpp  PcfMbsBinding.cpp  PlmnId.cpp  PlmnIdNid.cpp  Ssm.cpp
tests/: config.py  conftest.py  serverControl.py  testcases.txt
tests/pcf/delete/: test_pcf_delete_1_valid_204.py  test_pcf_delete_2_incorrect_UUID_404.py  test_pcf_delete_3_empty_link_400.py  test_pcf_delete_4_incorrect_type_UUID_400.py  test_pcf_delete_case1.py  test_pcf_delete_case2.py  test_pcf_delete_case3.py  test_pcf_delete_case4.py
tests/pcf/get/: test_pcf_get_1_valid_ipv4_200.py  test_pcf_get_2_vaild_macAddr_200.py  test_pcf_get_3_ipv6_400.py  test_pcf_get_4_ipv4_add_info_200.py  test_pcf_get_5_ipv4_add_info_incorrect_204.py  test_pcf_get_6_macAddr_add_info_200.py  test_pcf_get_7_macAddr_add_info_incorrect_204.py  test_pcf_get_8_ipv4_incorrect_404.py  test_pcf_get_9_macAddr_incorrect_404.py  test_pcf_get_case1.py  test_pcf_get_case2.py  test_pcf_get_case3.py  test_pcf_get_case4.py  test_pcf_get_case5.py  test_pcf_get_case6.py  test_pcf_get_case7.py  test_pcf_get_case8.py  test_pcf_get_case9.py
tests/pcf/post/: test_pcf_post_1_valid_ipv4_201.py  test_pcf_post_2_vaild_macAddr_201.py  test_pcf_post_3_ipv6_not_supp_400.py  test_pcf_post_4_UE_empty_400.py  test_pcf_post_5_already_exist_403.py  test_pcf_post_6_empty_body_400.py  test_pcf_post_case1.py  test_pcf_post_case2.py  test_pcf_post_case3.py  test_pcf_post_case4.py  test_pcf_post_case5.py  test_pcf_post_case6.py
tests/pcfUe/delete/: test_pcf_ue_delete_1_vaild_204.py  test_pcf_ue_delete_2_incorrect_UUID_404.py  test_pcf_ue_delete_3_empty_link_400.py  test_pcf_ue_delete_4_incorrect_type_UUID_400.py  test_pcf_ue_delete_case1.py  test_pcf_ue_delete_case2.py  test_pcf_ue_delete_case3.py  test_pcf_ue_delete_case4.py
tests/pcfUe/get/: test_pcf_ue_get_1_vaild_supi_200.py  test_pcf_ue_get_2_valid_gpsi_200.py  test_pcf_ue_get_3_incorrect_supi_200.py  test_pcf_ue_get_4_incorrect_gpsi_200.py  test_pcf_ue_get_case1.py  test_pcf_ue_get_case2.py  test_pcf_ue_get_case3.py  test_pcf_ue_get_case4.py
tests/pcfUe/post/: test_pcf_ue_case1.py  test_pcf_ue_post_1_valid_201.py  test_pcf_ue_post_2_UE_empty_400.py  test_pcf_ue_post_3_already_exist_403.py  test_pcf_ue_post_4_empty_body_400.py  test_pcf_ue_post_case1.py  test_pcf_ue_post_case2.py  test_pcf_ue_post_case3.py  test_pcf_ue_post_case4.py
